# scope

./: .gitignore  README.md  pyproject.toml  test.py
experiments/: bace.py  bbbp.py  clintox.py  hiv.py  scope_analysis.py  scope_bace.py  scope_bbbp.py  scope_clintox.py  scope_hiv.py
experiments/scope-dist/: scope_bace.py  scope_bbbp.py  scope_clintox.py
experiments/scope-dist/settings/: bbbp.toml
experiments/scope-dist/utils/: combinations.py  dataset.py  plots.py  settings.py
experiments/scope-dist/utils/search/: scope.py
experiments/scope-poly/: scope_analysis.py  scope_bace.py  scope_bbbp.py  scope_clintox.py
experiments/scope-poly/settings/: bace.toml  hiv.toml
experiments/scope-poly/utils/: plots.py  settings.py  smiles.py
experiments/scope-poly/utils/search/: scope.py
experiments/scratch/: bace.py  bbbp.py  clintox.py  hiv.py  scope_bace.py  scope_clintox.py  scope_hiv.py
experiments/settings/: bace.toml  bbbp.toml  clintox.toml  hiv.toml
experiments/utils/: dataset.py  plots.py  settings.py
experiments/utils/search/: meta.py  report.py  scope.py
src/scope/: __init__.py  model.py  prediction.py  scope_dist.py  scope_poly.py
src/scope/compression/: __init__.py  matrix.py  metrics.py
src/scope/compression/compressors/: __init__.py  base.py  integrated.py
src/scope/utils/: __init__.py  eval_metrics.py  plot.py  sampling.py
